--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lazyload-all",
-  "version": "0.1.0-beta.1",
-  "description": "The best third party JS|TS library scaffold",
+  "version": "0.1.0",
+  "description": "极简通用资源懒加载工具库",
   "sideEffects": false,
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
